<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoJava</string>
    <string name="add">Add</string>
    <string name="new_todo">New Todo</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done_question">done?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="save">save</string>

</resources>
