<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/title"
                    android:textSize="12sp"
                    android:textColor="#89000000"/>
                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="14sp"
                    android:textColor="#dc000000"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="72dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/description"
                    android:textSize="12sp"
                    android:textColor="#89000000"/>
                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="14sp"
                    android:textColor="#dc000000"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical|end"
                android:orientation="vertical">
                <Switch
                    android:id="@+id/sw_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/yes"
                    android:textOff="@string/no"
                    android:text="@string/done_question"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end"
                android:text="save"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>